<resources>
    <string name="app_name">PhoneListener</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dataInjection">信息注入</string>
    <string name="phone">手机</string>
    <string name="input_local_phone">请输入本机号码</string>
    <string name="injection">注入</string>
    <string name="id">ID</string>
    <string name="control">控制</string>
    <string name="input_local_control">请输入控制端账户</string>
    <string name="homtPage">主页面</string>
    <string name="startService">启动服务</string>
    <string name="stopService">停止服务</string>
    <string name="device_manager">设备管理</string>
    <string name="hidden_app">隐藏APP</string>
    <string name="info">备注</string>
    <string name="info_text">备注信息(如：张三的手机)</string>
    <string name="agreement">
        软件仅供测试交流\n
        请勿用于商业用途\n
        如有法律责任纠纷\n
        一律与开发者无关\n
        点击同意则表示阁下已清楚上述声明。
    </string>
</resources>
