<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:orientation="vertical">

    <!--Title-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_toolbar_height"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dataInjection"
            android:textSize="@dimen/activity_toolbar_text_size" />

    </RelativeLayout>

    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--信息提示-->
        <LinearLayout
            android:id="@+id/register_msgLL"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="1px"
            android:background="@color/black"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/register_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--手机-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/content_text_size_12" />

            <EditText
                android:id="@+id/register_inputPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_local_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--备注-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="@dimen/content_text_size_12" />

            <EditText
                android:id="@+id/register_info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/info_text"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--控制端账号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/control"
                android:textSize="@dimen/content_text_size_12" />

            <EditText
                android:id="@+id/register_inputId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_local_control"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>

        <!--激活按钮-->
        <LinearLayout
            android:id="@+id/register_injection"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ProgressBar
                android:id="@+id/register_pb"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/injection"
                android:textColor="@color/black"
                android:textSize="@dimen/content_text_size_12" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>